--- a/package.json
+++ b/package.json
@@ -1,23 +1,33 @@
 {
-	"name": "sms",
-	"version": "1.0.0",
-	"main": "index.js",
-	"license": "MIT",
-	"scripts": {
-		"clean": "rimraf dist",
-		"build": "yarn clean && tsc",
-		"start": "node dist/index.js",
-		"dev": "yarn build && cross-env NODE_ENV=development yarn start",
-		"watch": "cross-env NODE_ENV=development nodemon"
-	},
-	"devDependencies": {
-		"@types/node": "^18.11.18",
-		"cross-env": "^7.0.3",
-		"nodemon": "^2.0.20",
-		"rimraf": "^4.1.2",
-		"typescript": "^4.9.5"
-	},
-	"dependencies": {
-		"axios": "^1.3.2"
-	}
+  "name": "sms",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
+  "scripts": {
+    "clean": "rimraf dist",
+    "build": "yarn clean && tsc",
+    "start": "node dist/index.js",
+    "dev": "yarn build && cross-env NODE_ENV=development yarn start",
+    "watch": "cross-env NODE_ENV=development nodemon",
+    "format": "prettier -c --write",
+    "lint": "tslint -p tsconfig.json",
+    "prepare": "yarn build",
+    "preversion": "yarn lint",
+    "version": "yarn format && git add -A src",
+    "postversion": "git push && git push --tags"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.18",
+    "cross-env": "^7.0.3",
+    "nodemon": "^2.0.20",
+    "prettier": "^2.8.3",
+    "rimraf": "^4.1.2",
+    "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "axios": "^1.3.2"
+  },
+  "files": [
+    "dist/**/*"
+  ]
 }
