--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "yarn build && cross-env NODE_ENV=development yarn start",
     "watch": "cross-env NODE_ENV=development nodemon",
     "format": "prettier -c --write",
-    "lint": "tslint -p tsconfig.json",
+    "lint": "eslint . --ext .ts",
     "prepare": "yarn build",
     "preversion": "yarn lint",
     "version": "yarn format && git add -A src",
@@ -18,7 +18,10 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
     "cross-env": "^7.0.3",
+    "eslint": "^8.33.0",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.3",
     "rimraf": "^4.1.2",
