--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sms-toolkit",
   "version": "1.0.1",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "license": "MIT",
   "scripts": {
     "clean": "rimraf dist",
