--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "yarn clean && tsc",
     "start": "node dist/index.js",
     "dev": "yarn build && cross-env NODE_ENV=development yarn start",
+    "gen": "yarn build && node dist/gen/index.js",
     "watch": "cross-env NODE_ENV=development nodemon",
     "format": "prettier --check --write src",
     "lint": "eslint . --ext .ts",
@@ -29,7 +30,9 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "axios": "^1.3.2"
+    "axios": "^1.3.2",
+    "dotenv": "^16.0.3",
+    "dts-dom": "^3.7.0"
   },
   "files": [
     "dist/**/*"
