--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "sms-toolkit",
   "version": "1.0.56",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
   "license": "MIT",
   "scripts": {
     "clean": "rimraf dist",
     "build": "yarn clean && tsc",
-    "start": "node dist/index.js",
+    "start": "node dist/src/index.js",
     "dev": "yarn build && cross-env NODE_ENV=development yarn start",
     "gen": "yarn build && node dist/gen/index.js",
     "watch": "cross-env NODE_ENV=development nodemon",
